--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.17",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
